feat: add sandbox

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,20 +24,13 @@ jobs:
       - name: Run tests
         run: |
           WS_DIR=`pwd`
-          cd ${WS_DIR}/proto && make && pip install .
+          bash start_sandbox.sh
           cd ${WS_DIR}/kernel
-          echo "config_root_path=/tmp/" >.env
-          echo "workspace=/tmp/ws1" >> .env
-          echo "rpc_host=127.0.0.1">> .env
-          echo "rpc_port=9527" >> .env
-          echo "rpc_key=ZCeI9cYtOCyLISoi488BgZHeBkHWuFUH" >> .env
-          pip install .
-          octopus_kernel_rpc_server > rpc.log 2>&1 &
-          sleep 1
           pytest tests/*
           cd ${WS_DIR}/agent
-          pip install .
           pytest tests/*
+          cd ${WS_DIR}
+          bash clean_sandbox.sh
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
