--- a/.github/workflows/release_docker_image.yml
+++ b/.github/workflows/release_docker_image.yml
@@ -1,10 +1,9 @@
-name: Docker Release CD
+name: Release
 on:
     push:
         tags:
             - "[v]?[0-9]+.[0-9]+.[0-9]+"
 jobs:
-
   docker_image:
     name: build_pr_image
     runs-on: ubuntu-latest
@@ -15,20 +14,7 @@ jobs:
           submodules: recursive
       - name: Setup build env
         run: |
-          sudo apt-get install protobuf-compiler 
-          cargo install cargo-edit
-          ROOT_DIR=`pwd`
-          TAG=${GITHUB_REF/refs\/tags\//}
-          VERSION=${TAG#*v}
-          echo ${VERSION}
-          cargo set-version --workspace ${VERSION}
-          cd ${ROOT_DIR}/metadata && yarn install && npx hardhat compile
-          test -e ${ROOT_DIR}/metadata/artifacts/contracts/DB3MetaStore.sol/DB3MetaStore.json && cp -f ${ROOT_DIR}/metadata/artifacts/contracts/DB3MetaStore.sol/DB3MetaStore.json ${ROOT_DIR}/abi/
-          test -e ${ROOT_DIR}/metadata/artifacts/contracts/libraries/Events.sol/Events.json && cp -f ${ROOT_DIR}/metadata/artifacts/contracts/libraries/Events.sol/Events.json ${ROOT_DIR}/abi/
-          cd ${ROOT_DIR} && cargo build --release
-          cp ${ROOT_DIR}/target/release/db3 ${ROOT_DIR}/docker/
-          cd ${ROOT_DIR}/sdk && yarn && make && yarn build && yarn link
-          cd ${ROOT_DIR}/thirdparty/data-manager && yarn && yarn link db3.js && yarn build && mv -f dist ${ROOT_DIR}/docker/pages
+
       - name: docker login
         uses: docker/login-action@v1
         with:
