feat: add install section

--- a/.github/workflows/release_libraries.yml
+++ b/.github/workflows/release_libraries.yml
@@ -1,11 +1,9 @@
 on: workflow_dispatch
 jobs:
   pypi-publish:
-    name: Upload release to PyPI
+    name: Release the library to PYPI
     runs-on: self-hosted
     #runs-on: ubuntu-latest
-    permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,15 +20,52 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: proto/dist
+          password: ${{ secrets.PYPI_TOKEN }}
       - name: Publish Kernel
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: kernel/dist
+          password: ${{ secrets.PYPI_TOKEN }}
       - name: Publish Agent
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: agent/dist
+          password: ${{ secrets.PYPI_TOKEN }}
       - name: Publish Chat
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: chat/dist
+          password: ${{ secrets.PYPI_TOKEN }}
+      - name: docker login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Packaging Static files
+        shell: bash
+        run: |
+            TAG=${GITHUB_REF/refs\/tags\//}
+            RELEASE_NAME=octopus_setup-${TAG}.tar.gz
+            # package the setup scripts
+            tar -zcvf ${RELEASE_NAME} setup
+      - name: Releasing assets
+        uses: softprops/action-gh-release@v1
+        with:
+            files: |
+                octopus_setup-*.tar.gz
+
+      - name: Build Docker image
+        run: |
+          ROOT_DIR=`pwd`
+          RELEASE_NAME=${GITHUB_REF/refs\/tags\//}
+          cd ${ROOT_DIR}/docker && docker build -f Dockerfile --no-cache -t ghcr.io/dbpunk-labs/octopus_base:$RELEASE_NAME .
+          sed -i 's/FROM ghcr.io\/dbpunk-labs\/octopus_base/FROM ghcr.io\/dbpunk-labs\/octopus_base:$RELEASE_NAME/g' Dockerfile_for_agent
+          sed -i 's/FROM ghcr.io\/dbpunk-labs\/octopus_base/FROM ghcr.io\/dbpunk-labs\/octopus_base:$RELEASE_NAME/g' Dockerfile_for_kernel
+          docker build -f Dockerfile_for_agent --no-cache -t ghcr.io/dbpunk-labs/octopus_agent:$RELEASE_NAME .
+          docker build -f Dockerfile_for_kernel --no-cache -t ghcr.io/dbpunk-labs/octopus_kernel:$RELEASE_NAME .
+          docker push ghcr.io/dbpunk-labs/octopus_base:$RELEASE_NAME
+          docker push ghcr.io/dbpunk-labs/octopus_agent:$RELEASE_NAME
+          docker push ghcr.io/dbpunk-labs/octopus_kernel:$RELEASE_NAME
+          echo "the new images version $RELEASE_NAME"
