--- a/.github/workflows/doc_page.yml
+++ b/.github/workflows/doc_page.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: build page
         run: |
           cd docs 
           make html
