--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu
 RUN apt update
 RUN apt install -y python3 python3-pip
-RUN pip install -U octopus_agent octopus_kernel hapless
+RUN pip install -U og_agent og_kernel hapless
 ADD server /bin/
 ADD start_all.sh /bin/
