fix: auto relase sdk

--- a/.github/workflows/release_libraries.yml
+++ b/.github/workflows/release_libraries.yml
@@ -1,4 +1,8 @@
-on: workflow_dispatch
+name: Relase CLI
+on:
+  push:
+    tags:
+      - "[v]?[0-9]+.[0-9]+.[0-9]+"
 jobs:
   pypi-publish:
     name: Release the library to PYPI
