--- a/.github/workflows/cli_ci.yaml
+++ b/.github/workflows/cli_ci.yaml
@@ -19,6 +19,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+
+      - name: setup docker
+        uses: docker-practice/actions-setup-docker@master
+        timeout-minutes: 12
+        if: startsWith(runner.os, 'macos')
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
