--- a/.github/workflows/wsl_ci.yaml
+++ b/.github/workflows/wsl_ci.yaml
@@ -9,8 +9,7 @@ on:
       - main
 jobs:
   build:
-    #runs-on: self-hosted
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
