--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ setuptools==68.2.2
 grpcio-tools==1.58.0
 pytest-asyncio==0.21.1
 grpc-google-iam-v1==0.12.6
-matplotlib==3.8.0
+matplotlib
 pydantic==2.4.0
 aiosqlite==0.19.0
 rich==13.5.3
