fix: add systemd boot

--- a/.github/workflows/wsl_ci.yaml
+++ b/.github/workflows/wsl_ci.yaml
@@ -21,6 +21,10 @@ jobs:
       - uses: Vampire/setup-wsl@v2
         with:
           distribution: ${{ matrix.os }}
+          wsl-conf: |
+            [boot]
+            systemd=true
+
       - shell: wsl-bash -u root {0}
         name: test the cli
         run: |
@@ -37,8 +41,6 @@ jobs:
             tee /etc/apt/sources.list.d/docker.list > /dev/null
           apt-get update
           apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
-          systemctl start docker
-          systemctl status docker
           apt-get install -y python3-pip
           pip install -r requirements.txt
           cd up
