--- a/.github/workflows/wsl_ci.yaml
+++ b/.github/workflows/wsl_ci.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        os: [Ubuntu-22.04, Ubuntu-20.04]
+        os: [Ubuntu-22.04]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
