--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
-FROM ubuntu
+FROM ubuntu:22.04
 RUN apt update
 RUN apt install -y python3 python3-pip
 RUN pip install -U og_proto og_sdk og_agent og_kernel hapless
+RUN adduser octogen
 ADD server /bin/
 ADD start_all.sh /bin/
 ADD add_endpoint.sh /bin/
