fix: install wget

--- a/docker/Dockerfile_chrome
+++ b/docker/Dockerfile_chrome
@@ -6,6 +6,7 @@ RUN adduser octogen
 ADD server /bin/
 ADD start_all.sh /bin/
 ADD add_endpoint.sh /bin/
+RUN apt install -y wget
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
 RUN sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
 RUN apt-get update
