--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 RUN apt update
 RUN apt install -y python3 python3-pip
 RUN pip install -U og_proto og_sdk og_agent og_kernel hapless
-RUN adduser octogen
+RUN useradd -ms /bin/bash octogen
 ADD server /bin/
 ADD start_all.sh /bin/
 ADD add_endpoint.sh /bin/
