feat: add script to manage kernel

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,4 +5,5 @@ RUN pip install -U og_proto og_sdk og_agent og_kernel hapless
 RUN useradd -ms /bin/bash octogen
 ADD server /bin/
 ADD start_all.sh /bin/
+ADD start_kernel.sh /bin/
 ADD add_endpoint.sh /bin/
