--- a/.github/workflows/cli_ci.yaml
+++ b/.github/workflows/cli_ci.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [self-hosted, windows-latest, macos-latest]
-        python-version: ["3.11"]
+        python-version: ["3.11", "3.10"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
