--- a/kernel/.gitignore
+++ b/kernel/.gitignore
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2023 imotai <jackwang@octogen.dev>
+# SPDX-FileContributor: imotai
+#
+# SPDX-License-Identifier: Elastic-2.0
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
