--- a/proto/requirements.txt
+++ b/proto/requirements.txt
@@ -1,2 +1,7 @@
+# SPDX-FileCopyrightText: 2023 imotai <jackwang@octogen.dev>
+# SPDX-FileContributor: imotai
+#
+# SPDX-License-Identifier: Elastic-2.0
+
 grpcio-tools==1.59.0
 grpc-google-iam-v1==0.12.6
