--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,8 @@ jobs:
         run: |
           WS_DIR=`pwd`
           bash start_sandbox.sh
+          cd ${WS_DIR}/memory
+          pytest tests/*.py
           cd ${WS_DIR}/agent
           pytest tests/*.py
           cd ${WS_DIR}/sdk
